new thumbs, new images

--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -68,10 +68,19 @@
 <hr color="#50A8AF">
 <br>
 <div class="space">
-		<img src="images/animation/DriveMount-spin.gif"></img>
-		<br>
 <div class="container">
-	<img src="images/animation/DriveMount-connect.gif"></img>
+	<img src="images/animation/DriveMount-connect.gif" class="video"></img>
+
+</div>
+
+<br>
+
+<div class="container">
+
+	<img src="images/animation/DriveMount-spin.gif" class="video"></img>
+
+</div>
+
 <br><br>
 <p>
   camera, editor, concept
@@ -79,7 +88,6 @@
   Marketing materials for DriveMount, more at <a target="_blank" href="https://www.soulcow.net/">soulcow.net</a>
 <br><br>
 </p>
-</div>
 </div>
 
 <br><br>
@@ -91,15 +99,15 @@
 <div class="space">
 <div class="container">
 
-  <a id="mhc"><img src="https://i.vimeocdn.com/video/753147158_640.jpg" class="video"></a>
-  <div id="iframeHolder">
+  <a id="mhc"><img src="images/thumbs/commercial/MountHolyoke.jpg" class="video"></a>
+  <div id="mhcframe">
   </div>
 
 <script type="text/javascript">
 $(function(){
     $('#mhc').click(function(){
         if(!$('#iframe').length) {
-                $('#iframeHolder').html('<iframe src="https://player.vimeo.com/video/312160851?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+                $('#mhcframe').html('<iframe src="https://player.vimeo.com/video/312160851?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
         }
     });   
 });
@@ -128,7 +136,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="ken"><img src="http://i3.ytimg.com/vi/hZtUYXg1Vdk/maxresdefault.jpg" class="video"></a>
+  <a id="ken"><img src="images/thumbs/commercial/KenBurns.jpg" class="video"></a>
   <div id="kenframe">
   </div>
 
@@ -165,7 +173,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="shelby"><img src="https://i.vimeocdn.com/video/538393242_640.jpg" class="video"></a>
+  <a id="shelby"><img src="images/thumbs/commercial/ShelbyHead.jpg" class="video"></a>
   <div id="shelbyframe">
   </div>
 
@@ -203,7 +211,7 @@ $(function(){
 
 
 
-  <a id="salman"><img src="http://i3.ytimg.com/vi/zZ6LzERAsxE/maxresdefault.jpg" class="video"></a>
+  <a id="salman"><img src="images/thumbs/commercial/SalmanProfile.jpg" class="video"></a>
   <div id="salmanframe">
   </div>
 
@@ -241,7 +249,7 @@ $(function(){
 <div class="container">
 
 
-  <a id="ska"><img src="http://i3.ytimg.com/vi/n1T2_1Za_Q8/hqdefault.jpg" class="video"></a>
+  <a id="ska"><img src="images/thumbs/commercial/Ska.jpg" class="video"></a>
   <div id="skaframe">
   </div>
 
@@ -284,7 +292,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="path"><img src="https://i.vimeocdn.com/video/496316879_640.jpg" class="video"></a>
+  <a id="path"><img src="images/thumbs/commercial/PathofDarkness.jpg" class="video"></a>
   <div id="pathframe">
   </div>
 
@@ -321,7 +329,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="sff"><img src="https://i.vimeocdn.com/video/493864016_640.jpg" class="video"></a>
+  <a id="sff"><img src="images/thumbs/commercial/SFFFF.jpg" class="video"></a>
   <div id="sffframe">
   </div>
 
@@ -358,7 +366,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="sww"><img src="https://i.vimeocdn.com/video/523772031_640.jpg" class="video"></a>
+  <a id="sww"><img src="images/thumbs/commercial/SummerWind.jpg" class="video"></a>
   <div id="swwframe">
   </div>
 
