--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -38,6 +38,8 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
+
 </head>
 
 <div>
@@ -111,7 +113,21 @@
 <br>
 <div class="space">
 <div class="container">
-	<iframe src="https://player.vimeo.com/video/174029854?&loop=1&color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="dreams"><img src="images/thumbs/fiction/Dreams.jpg" class="video"></a>
+  <div id="dreamsframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#dreams').click(function(){
+        if(!$('#iframe').length) {
+                $('#dreamsframe').html('<iframe src="https://player.vimeo.com/video/174029854?&loop=1&color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -137,7 +153,21 @@
 
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="slash"><img src="images/thumbs/fiction/Slashes.jpg" class="video"></a>
+  <div id="slashframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#slash').click(function(){
+        if(!$('#iframe').length) {
+                $('#slashframe').html('<iframe src="https://player.vimeo.com/video/132660943?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -160,7 +190,21 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/140592868?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="paris"><img src="images/thumbs/fiction/ParisFilm.jpg"></a>
+  <div id="parisframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#paris').click(function(){
+        if(!$('#iframe').length) {
+                $('#parisframe').html('<iframe src="https://player.vimeo.com/video/140592868?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -183,7 +227,21 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/123589583?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="even"><img src="images/thumbs/fiction/EvenThoughWeSometimesFight.jpg" class="video"></a>
+  <div id="evenframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#even').click(function(){
+        if(!$('#iframe').length) {
+                $('#evenframe').html('<iframe src="https://player.vimeo.com/video/123589583?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -207,7 +265,21 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/127789780?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="something"><img src="images/thumbs/fiction/SomethingRestless.jpg" class="video"></a>
+  <div id="somethingframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#something').click(function(){
+        if(!$('#iframe').length) {
+                $('#somethingframe').html('<iframe src="https://player.vimeo.com/video/127789780?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -232,7 +304,21 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/93182932?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+  <a id="call"><img src="images/thumbs/fiction/IncomingCall.jpg" class="video"></a>
+  <div id="callframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#call').click(function(){
+        if(!$('#iframe').length) {
+                $('#callframe').html('<iframe src="https://player.vimeo.com/video/93182932?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -255,7 +341,22 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/119695079?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+
+  <a id="dec"><img src="images/thumbs/fiction/December.jpg" class="video"></a>
+  <div id="decframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#dec').click(function(){
+        if(!$('#iframe').length) {
+                $('#decframe').html('<iframe src="https://player.vimeo.com/video/119695079?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
@@ -277,7 +378,22 @@
 <br>
 <div class="space">
 <div class="container">
-  <iframe src="https://player.vimeo.com/video/106734653?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>
+
+
+  <a id="haz"><img src="images/thumbs/fiction/HazardLights.jpg" class="video"></a>
+  <div id="hazframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#haz').click(function(){
+        if(!$('#iframe').length) {
+                $('#hazframe').html('<iframe src="https://player.vimeo.com/video/106734653?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
 </div>
 
 <br><br>
