--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -43,7 +43,7 @@
   <li><a href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
-  <li><a target="_blank" href="Ben Cowper | c.v..pdf">c.v.</a></li>
+  <li><a target="_blank" href="Ben Cowper | filmography.pdf">film credits</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
   </div>
