added design page

--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -38,6 +38,7 @@
   <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
   <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a href="demo-reel.html">reel</a></li>
+  <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a href="production-stills.html">production stills</a></li>
@@ -49,7 +50,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2018</footer>
+<footer>All content Copyright Ben Cowper, 2019</footer>
 
 <body>
 
@@ -77,7 +78,7 @@ I have always loved working with video, and began producing professional work as
 
 <br><br>
 
-A more complete list of my professional and personal work can be found <a target="_blank" href="Ben Cowper | c.v..pdf">here on my C.V.</a>
+A more complete list of my film credits can be found <a target="_blank" href="Ben Cowper | filmography.pdf">here.</a>
 
 </p>
 
