--- a/design-marketing.html
+++ b/design-marketing.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 
-<title>Filmmaker, Educator, Artist | Home - Ben Cowper</title>
-<link rel="stylesheet" type="text/css" href="styles.css" />
+<title>Filmmaker, Educator, Artist | About Me - Ben Cowper</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
+
 <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
 <link rel="author" href="humans.txt">
 
@@ -28,22 +29,16 @@
 <meta name="msapplication-TileImage" content="icons/favicon-144.png">
 <meta name="msapplication-config" content="icons/browserconfig.xml">
 
-<style type="text/css">
-body, html {
-  background-color: #000000;
-}
-</style>
-
 </head>
 
 <div>
-  <img src="icons/menu-white.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
+  <img src="icons/menu-black.png" style="width:10%;" alt="menu" onclick="openMenu()" class="menuButton"></img>
   <div id="menu" class="menuItems">
   <li><a href="ben-cowper-about.html">me</a></li>
   <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
   <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a href="demo-reel.html">reel</a></li>
-  <li><a href="design-marketing.html">design and marketing</a></li>
+  <li><a class="active" href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a href="production-stills.html">production stills</a></li>
@@ -62,11 +57,126 @@ body, html {
 <div class="main">
 
 <hr color="#50A8AF">
-<h2 style="color: white;">Ben Cowper</h2>
+<h2>Web Design</h2>
 <hr color="#50A8AF">
 <br>
 
-<a href="ben-cowper-about.html"><img class="space" src="images/Snowflake.jpg" alt="Snowflake" style="width: 80%;"></a>
+<div class="space">
+
+<p>
+  <b>SoulCow (2018)</b>
+  <br>
+  <a target="_blank" href="https://www.soulcow.net">soulcow.net</a> - Developer (Squarespace, CSS, HTML)
+<br><br>
+  <b>University of Minnesota Psychology Deptartment (2017 - 2018)</b>
+  <br>
+  <a target="_blank" href="https://cla.umn.edu/psychology">cla.umn.edu/psychology</a> - Developer (Drupal, CSS, HTML)
+  <br>
+  <a target="_blank" href="http://intranet.psych.umn.edu">intranet.psych.umn.edu</a> - Developer (Drupal, CSS, HTML)
+<br><br>
+  <b>Becoming Helen Keller (2016 - 2017)</b>
+  <br>
+  <a target="_blank" href="https://www.becominghelenkeller.org">becominghelenkeller.org</a> - Developer (Squarespace, CSS, HTML)
+<br><br>
+  <b>Beehive Sewing (2016)</b>
+  <br>
+  <a target="_blank" href="https://www.beehivesewing.com">beehivesewing.com</a> - UI Designer (Wordpress, CSS, HTML)
+<br><br>
+  <b>The Global Fibrosis Foundation (2015)</b>
+  <br>
+  <a target="_blank" href="http://globalfibrosis.org">globalfibrosis.org</a> - Developer (Squarespace, CSS, HTML)
+<br><br>
+  <b>Ben Cowper, my portfolio site</b>
+  <br>
+  <a target="_blank" href="http://bcowper.com">bcowper.com</a> - Developer, UI Designer (HTML, CSS)
+</p>
+
+<br><br>
+
+</div>
+
+<hr color="#50A8AF">
+<h2>Graphics and Marketing</h2>
+<hr color="#50A8AF">
+<br>
+
+<div class="space">
+
+<p>
+  <b>SoulCow (2018)</b>
+  <br><br>
+  Graphics for website, marketing materials, social media, and product design
+  <br><br>
+
+<img class="space" id="samplework" src="images/design/SoulCow.png" alt="SoulCow Marketing Materials">
+
+<br>
+
+</p>
+
+<hr color="#af5750">
+
+<br>
+
+<p>
+  <b>Becoming Helen Keller (2016 - 2017)</b>
+  <br><br>
+  Graphics for website, marketing materials, social media, and Kickstarter campaign
+  <br><br>
+
+<img class="space" id="samplework" src="images/design/BHK.png" alt="BHK Marketing Materials">
+
+<br>
+
+</p>
+
+<hr color="#af5750">
+
+<br>
+
+<p>
+  <b>University of Minnesota Psychology Deptartment (2017 - 2018)</b>
+  <br><br>
+  Graphics for website, events, and print materials
+  <br><br>
+
+<img class="space" id="samplework" src="images/design/Psychology.jpeg" alt="UMN Psychology Logo">
+
+<br>
+
+</p>
+
+<hr color="#af5750">
+
+<br>
+
+<p>
+  <b>John F. Kennedy Coloring Book (2015)</b>
+  <br><br>
+  Drawings and concept
+  <br><br>
+
+<img class="space" id="samplework" src="images/design/JFK.png" alt="JFK Coloring Book">
+
+<br>
+
+</p>
+
+<hr color="#af5750">
+
+<br>
+
+<p>
+  <b>Five College Undergraduate Research Journal (2014)</b>
+  <br><br>
+  Graphics for website, social media, and print materials
+  <br><br>
+
+<img class="space" id="samplework" src="images/design/5cj.png" style="width: 50%;" alt="Five College Undergrad Journal Logo">
+
+<br>
+
+</p>
 
 </div>
 
