--- a/demo-reel.html
+++ b/demo-reel.html
@@ -46,6 +46,7 @@
   <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
   <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a class="active" href="demo-reel.html">reel</a></li>
+  <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a href="production-stills.html">production stills</a></li>
@@ -57,7 +58,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2018</footer>
+<footer>All content Copyright Ben Cowper, 2019</footer>
 
 <body>
 
