--- a/production-stills.html
+++ b/production-stills.html
@@ -47,6 +47,7 @@
   <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
   <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a href="demo-reel.html">reel</a></li>
+  <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a class="active" href="production-stills.html">production stills</a></li>
@@ -58,7 +59,7 @@
   </div>
 </div>
 
-<footer>All content Copyright Ben Cowper, 2018</footer>
+<footer>All content Copyright Ben Cowper, 2019</footer>
 
 <body>
 
