re-arranged photo page

--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -52,7 +52,6 @@
   <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
-  <li><a href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | filmography.pdf">film credits</a></li>
@@ -102,7 +101,7 @@
 <br><br>
   Read more about the film and production process in <a target="_blank" href="http://www.stephenkingshortmovies.com/interviews/ben-cowper-october-18-2017/">my interview</a>  with stephenkingshortmovies.com
 <br><br>
-  <a href="production-stills.html"> Production stills</a>
+  <a href="photography-portfolio.html"> Production stills</a>
 </p>
 </div>
 
@@ -291,7 +290,7 @@ $(function(){
 <br><br>
   Three vignette stories, each featuring a unique set of actors, thematically meld together into a single story of two college students' fleeting but impactful time together before they graduate and part ways.
 <br><br>
-  <a href="production-stills.html"> Production stills</a>
+  <a href="photography-portfolio.html"> Production stills</a>
 </p>
 </div>
 
@@ -405,7 +404,7 @@ $(function(){
 <br><br>
   A friend's thesis film.
 <br><br>
-  <a href="production-stills.html"> Production stills</a>
+  <a href="photography-portfolio.html"> Production stills</a>
 </p>
 </div>
 </div>
