--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -50,7 +50,6 @@
   <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a class="active" href="photography-portfolio.html">photography</a></li>
-  <li><a href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | filmography.pdf">film credits</a></li>
@@ -65,9 +64,8 @@
 
 <div class="main">
 
-<a name="photography"></a>
 <hr color="#50A8AF">
-<h2>Photography</h2>
+<h2>Commercial and Art Photography</h2>
 <hr color="#50A8AF">
 <br>
 
@@ -88,6 +86,40 @@
 </div>
 </div>
 
+<br><br>
+
+<p>
+  Further photography work with <a target="_blank" href="https://www.jandsvision.com/product/js-felis-vintage-cat-eyes-large-fit-polarized-100uv-sunglasses-women/">J+S Vision can be seen here</a>
+</div>
+
+<br><br>
+
+<hr color="#50A8AF">
+<h2>Film Production Stills</h2>
+<hr color="#50A8AF">
+<br>
+
+<div class="space">
+<div class="container">
+<div class="galleria">
+    <img src="images/production/Prod_Nona1.jpg">
+    <img src="images/production/Prod_Nona2.jpg">
+    <img src="images/production/Prod_Nona3.jpg">
+    <img src="images/production/Prod_Nona4.jpg">
+    <img src="images/production/Prod_Nona5.jpg">
+    <img src="images/production/Prod_Nona6.jpg">
+    <img src="images/production/Prod_Nona7.jpg">
+    <img src="images/production/Prod_Ska.jpg">
+    <img src="images/production/Prod_HazardLights.jpg">
+    <img src="images/production/Prod_Demo.jpg">
+    <img src="images/production/Prod_Demo2.jpg">
+    <img src="images/production/Prod_Kickstarter.jpg">
+    <img src="images/production/Prod_SomethingRestless1.jpg">
+    <img src="images/production/Prod_SomethingRestless2.jpg">
+    <img src="images/production/Prod_16mm.jpg">
+</div>
+</div>
+
 <script>
 (function() { 
     Galleria.loadTheme('galleria/themes/classic/galleria.classic.min.js');
@@ -97,13 +129,10 @@
 
 <br><br>
 <p>
-  Commercial and Art Photography
+Various stills from productions I have worked on:
 <br><br>
-  All photographs by Ben Cowper
+<i>Nona, Science ka Adda, Hazard Lights, Something Restless, </i>and<i> falls into sky.</i>
 </p>
-<br><br>
-<p>
-  Further photography work with <a target="_blank" href="https://www.jandsvision.com/product/js-felis-vintage-cat-eyes-large-fit-polarized-100uv-sunglasses-women/">J+S Vision can be seen here</a>
 </div>
 </div>
 
