--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -49,7 +49,6 @@
   <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
-  <li><a href="production-stills.html">production stills</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="Ben Cowper | filmography.pdf">film credits</a></li>
@@ -278,7 +277,7 @@ $(function(){
 <br><br>
   <a target="_blank" href="http://www.dawn.com/news/1220513/how-did-an-urdu-greeting-reach-the-edge-of-our-solar-system">News article featured in DAWN</a>
 <br><br>
-  <a href="production-stills.html"> Production stills</a>
+  <a href="photography-portfolio.html"> Production stills</a>
 </p>
 </div>
 
