--- a/design-marketing.html
+++ b/design-marketing.html
@@ -171,7 +171,7 @@
   Graphics for website, social media, and print materials
   <br><br>
 
-<img class="space" id="samplework" src="images/design/5cj.png" style="width: 50%;" alt="Five College Undergrad Journal Logo">
+<img class="space" id="samplework" src="images/design/5CJ.png" style="width: 50%;" alt="Five College Undergrad Journal Logo">
 
 <br>
 
