added new photos

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -105,6 +105,7 @@
     <img src="images/production/Prod_QT1.jpg">
     <img src="images/production/Prod_QT2.jpg">
     <img src="images/production/Prod_QT3.jpg">
+    <img src="images/production/Prod_QT4.jpg">
     <img src="images/production/Prod_Nona1.jpg">
     <img src="images/production/Prod_Nona2.jpg">
     <img src="images/production/Prod_Nona3.jpg">
