--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -69,11 +69,11 @@
 
 <p>
 
-I am always seeking opportunities to collaborate. At the moment I'm most interested in narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you'd like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
+I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.  
 
 <br><br>
 
-I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.
+At the moment I am most interested in collaborative narrative and documentary film, audio storytelling, interactive or experimental installation, and commercial work. If you would like to work together you can send me an email at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a>
 
 <br><br>
 
