updated image links

--- a/design-marketing.html
+++ b/design-marketing.html
@@ -111,7 +111,7 @@
   Graphics for website, marketing materials, social media, and product design
   <br><br>
 
-<img class="space" id="samplework" src="images/design/SoulCow.png" alt="SoulCow Marketing Materials">
+<a href="https://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.png" alt="SoulCow Marketing Materials"></a>
 
 <br>
 
@@ -127,7 +127,7 @@
   Graphics for website, marketing materials, social media, and Kickstarter campaign
   <br><br>
 
-<img class="space" id="samplework" src="images/design/BHK.png" alt="BHK Marketing Materials">
+<a href="https://www.becominghelenkeller.org"><img class="space" id="samplework" src="images/design/BHK.png" alt="BHK Marketing Materials"></a>
 
 <br>
 
