--- a/installation-portfolio.html
+++ b/installation-portfolio.html
@@ -98,9 +98,7 @@ Plates of delectable fruits are served in a cocktail party atmosphere complete w
 
 <div class="space">
 <div class="container">
-<div class="galleria">
-    <img src="images/installation/NoClass.jpg">
-</div>
+    <img src="images/installation/NoClass.jpg" class="video" alt="No Class Documentation">
 </div>
 
 <br><br>
@@ -148,9 +146,7 @@ A gallery of famous "art" is disgraced and mutilated before your eyes.
 
 <div class="space">
 <div class="container">
-<div class="galleria">
-    <img src="images/installation/Untitled.jpg">
-</div>
+    <img src="images/installation/Untitled.jpg" class="video" alt="Untitled Documentation">
 </div>
 
 <script>
