--- a/design-marketing.html
+++ b/design-marketing.html
@@ -111,7 +111,7 @@
   Graphics for website, marketing materials, social media, and product design
   <br><br>
 
-<a href="https://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.png" alt="SoulCow Marketing Materials"></a>
+<a href="https://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.jpg" alt="SoulCow Marketing Materials"></a>
 
 <br>
 
@@ -159,7 +159,7 @@
   Drawings and concept
   <br><br>
 
-<img class="space" id="samplework" src="images/design/JFK.png" alt="JFK Coloring Book">
+<img class="space" id="samplework" src="images/design/JFK.jpg" alt="JFK Coloring Book">
 
 <br>
 
