--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -164,13 +164,13 @@ window.onclick = function(event) {
 }
 </script>
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments)};
   gtag('js', new Date());
 
   gtag('config', 'UA-106541861-1');
-</script>
+</script> -->
 
 </html>
