--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="galleria/galleria-1.5.7.min.js"></script>
 
 <title>Fiction Film Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
