--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="galleria/galleria-1.5.7.min.js"></script>
 
 <title>Photography Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
@@ -164,13 +164,13 @@ window.onclick = function(event) {
 }
 </script>
 
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106541861-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments)};
   gtag('js', new Date());
 
   gtag('config', 'UA-106541861-1');
-</script> -->
+</script>
 
 </html>
