temp disable images

--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -114,13 +114,13 @@
     <img src="images/production/Prod_Nona6.jpg">
     <img src="images/production/Prod_Nona7.jpg">
     <img src="images/production/Prod_Ska.jpg">
-    <img src="images/production/Prod_HazardLights.jpg">
+<!--     <img src="images/production/Prod_HazardLights.jpg">
     <img src="images/production/Prod_Demo.jpg">
     <img src="images/production/Prod_Demo2.jpg">
     <img src="images/production/Prod_Kickstarter.jpg">
     <img src="images/production/Prod_SomethingRestless1.jpg">
     <img src="images/production/Prod_SomethingRestless2.jpg">
-    <img src="images/production/Prod_16mm.jpg">
+    <img src="images/production/Prod_16mm.jpg"> -->
 </div>
 </div>
 
