--- a/photography-portfolio.html
+++ b/photography-portfolio.html
@@ -78,6 +78,7 @@
     <img src="images/SanFrancisco.jpg">
     <img src="images/RedBarn.jpg">
     <img src="images/Boat.jpg">
+    <img src="images/Ice.jpg">
     <img src="images/Moon.jpg">
     <img src="images/Mountain.jpg">
     <img src="images/Snowflake.jpg">
