--- a/design-marketing.html
+++ b/design-marketing.html
@@ -67,6 +67,10 @@
   <br>
   <a target="_blank" href="https://www.soulcow.net">soulcow.net</a> - Developer (Squarespace, CSS, HTML)
 <br><br>
+  <b>Dr. Emili Rambus (2018)</b>
+  <br>
+  <a target="_blank" href="http://www.dremilirambus.com/">dremilirambus.com</a> - Developer, Designer (HTML, CSS)
+<br><br>
   <b>University of Minnesota Psychology Deptartment (2017 - 2018)</b>
   <br>
   <a target="_blank" href="https://cla.umn.edu/psychology">cla.umn.edu/psychology</a> - Developer (Drupal, CSS, HTML)
