--- a/design-marketing.html
+++ b/design-marketing.html
@@ -65,7 +65,7 @@
 <p>
   <b>SoulCow (2018)</b>
   <br>
-  <a target="_blank" href="https://www.soulcow.net">soulcow.net</a> - Developer (Squarespace, CSS, HTML)
+  <a target="_blank" href="http://www.soulcow.net">soulcow.net</a> - Developer (Squarespace, CSS, HTML)
 <br><br>
   <b>Dr. Emili Rambus (2018)</b>
   <br>
@@ -115,7 +115,7 @@
   Graphics for website, marketing materials, social media, and product design
   <br><br>
 
-<a href="https://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.jpg" alt="SoulCow Marketing Materials"></a>
+<a href="http://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.jpg" alt="SoulCow Marketing Materials"></a>
 
 <br>
 
