--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ body, html {
   <li><a target="_blank" href="Ben Cowper | filmography.pdf">film credits</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
+  <li><a target="_blank" href="https://is.gd/b0V8ab">personalized tutoring</a></li>
   </div>
 </div>
 
