--- a/design-marketing.html
+++ b/design-marketing.html
@@ -65,7 +65,7 @@
 <p>
   <b>SoulCow (2018)</b>
   <br>
-  <a target="_blank" href="http://www.soulcow.net">soulcow.net</a> - Developer (Squarespace, CSS, HTML)
+  <a target="_blank" href="http://www.soulcow.net">soulcow.net</a> - Developer, UI Designer (HTML, CSS)
 <br><br>
   <b>Dr. Emili Rambus (2018)</b>
   <br>
