--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -85,7 +85,7 @@
 <p>
   camera, editor, concept
 <br><br>
-  Marketing materials for DriveMount, more at <a target="_blank" href="https://www.soulcow.net/">soulcow.net</a>
+  Marketing materials for DriveMount, more at <a target="_blank" href="http://www.soulcow.net">soulcow.net</a>
 <br><br>
 </p>
 </div>
