--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -4,6 +4,12 @@
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="galleria/galleria-1.5.7.min.js"></script>
+<script> Galleria.configure({
+  thumbQuality: false,
+  thumbnails: false,
+});
+</script>
+
 
 <title>TV Studio Renovation | Ben Cowper - Filmmaker, Educator, Artist</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
