--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -4,7 +4,8 @@
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="galleria/galleria-1.5.7.min.js"></script>
-<script> Galleria.configure({
+<script>
+  Galleria.configure({
   thumbQuality: false,
   thumbnails: false,
 });
