--- a/demo-reel.html
+++ b/demo-reel.html
@@ -3,6 +3,9 @@
 <head>
 
 <title>Cinematography and Editing Demo Reel | Ben Cowper</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 <style type="text/css">
