--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 
 <title>Filmmaker, Educator, Artist | Home - Ben Cowper</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" type="text/css" href="styles.css" />
 <link rel="stylesheet" type="text/css" media="only screen and (max-width: 480px), only screen and (max-device-width: 480px)" href="mobile.css">
 <link rel="author" href="humans.txt">
