--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -3,6 +3,9 @@
 <head>
 
 <title>Commercial Film Portfolio | Ben Cowper - Filmmaker, Educator, Artist</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 <style type="text/css">
