--- a/installation-portfolio.html
+++ b/installation-portfolio.html
@@ -12,6 +12,9 @@
 </script>
 
 <title>Installation | Ben Cowper - Filmmaker, Educator, Artist</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link rel="stylesheet" type="text/css" href="styles.css">
 
 <style type="text/css">
