--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -200,7 +200,7 @@ $(function(){
 <div class="space">
 <div class="container">
 
-  <a id="paris"><img src="images/thumbs/fiction/ParisFilm.jpg"></a>
+  <a id="paris"><img src="images/thumbs/fiction/ParisFilm.png" class="video"></a>
   <div id="parisframe">
   </div>
 
