--- a/tv-studio-renovation.html
+++ b/tv-studio-renovation.html
@@ -64,7 +64,7 @@
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-  <li><a target="_blank" href="https://is.gd/b0V8ab">personalized tutoring</a></li>
+  <li><a href="personalized-tutoring.html">personalized tutoring</a></li>
   </div>
 </div>
 
