--- a/personalized-tutoring.html
+++ b/personalized-tutoring.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Filmmaker, Educator, Artist | About Me - Ben Cowper</title>
+<title>Personalized Tutoring | Ben Cowper</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -41,14 +41,14 @@
   <li><a href="fiction-film-portfolio.html">film - fiction</a></li>
   <li><a href="commercial-film-portfolio.html">film - commercial</a></li>
   <li><a href="demo-reel.html">reel</a></li>
-  <li><a class="active" href="design-marketing.html">design and marketing</a></li>
+  <li><a href="design-marketing.html">design and marketing</a></li>
   <li><a href="photography-portfolio.html">photography</a></li>
   <li><a href="installation-portfolio.html">installation</a></li>
   <li><a href="tv-studio-renovation.html">tv studio renovation</a></li>
   <li><a target="_blank" href="Ben Cowper | resume.pdf">resume</a></li>
   <li><a target="_blank" href="https://linkedin.com/in/bencowper">linkedin</a></li>
   <li><a target="_blank" href="https://vimeo.com/bencowper">vimeo</a></li>
-  <li><a href="personalized-tutoring.html">personalized tutoring</a></li>
+  <li><a class="active" href="personalized-tutoring.html">personalized tutoring</a></li>
   </div>
 </div>
 
@@ -59,133 +59,62 @@
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Web Design</h2>
+<h2>Personalized Tutoring</h2>
+<h3>Learn remotely or in-person</h3>
 <hr color="#50A8AF">
 <br>
+
+<img class="space" id="me" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
+
+<br><br>
 
 <div class="space">
 
 <p>
-  <b>SoulCow (2018)</b>
-  <br>
-  <a target="_blank" href="http://www.soulcow.net">soulcow.net</a> - Developer, UI Designer (HTML, CSS)
-<br><br>
-  <b>Dr. Emili Rambus (2018)</b>
-  <br>
-  <a target="_blank" href="http://www.dremilirambus.com/">dremilirambus.com</a> - Developer, Designer (HTML, CSS)
-<br><br>
-  <b>University of Minnesota Psychology Deptartment (2017 - 2018)</b>
-  <br>
-  <a target="_blank" href="https://cla.umn.edu/psychology">cla.umn.edu/psychology</a> - Developer (Drupal, CSS, HTML)
-  <br>
-  <a target="_blank" href="http://intranet.psych.umn.edu">intranet.psych.umn.edu</a> - Developer (Drupal, CSS, HTML)
-<br><br>
-  <b>Becoming Helen Keller (2016 - 2017)</b>
-  <br>
-  <a target="_blank" href="https://www.becominghelenkeller.org">becominghelenkeller.org</a> - Developer (Squarespace, CSS, HTML)
-<br><br>
-  <b>Beehive Sewing (2016)</b>
-  <br>
-  <a target="_blank" href="https://www.beehivesewing.com">beehivesewing.com</a> - UI Designer (Wordpress, CSS, HTML)
-<br><br>
-  <b>The Global Fibrosis Foundation (2015)</b>
-  <br>
-  <a target="_blank" href="http://globalfibrosis.org">globalfibrosis.org</a> - Developer (Squarespace, CSS, HTML)
-<br><br>
-  <b>Ben Cowper, my portfolio site</b>
-  <br>
-  <a target="_blank" href="http://bcowper.com">bcowper.com</a> - Developer, UI Designer (HTML, CSS)
-<br><br>
-  <b>Sarah Brauner, my partner's professional site</b>
-  <br>
-  <a target="_blank" href="http://www-users.math.umn.edu/~braun622/index.html">Sarah Brauner</a> - Developer, UI Designer (HTML, CSS)
-</p>
 
-<br><br>
-
-</div>
-
-<hr color="#50A8AF">
-<h2>Graphics and Marketing</h2>
-<hr color="#50A8AF">
-<br>
-
-<div class="space">
-
-<p>
-  <b>SoulCow (2018)</b>
-  <br><br>
-  Graphics for website, marketing materials, social media, and product design
-  <br><br>
-
-<a href="http://www.soulcow.net"><img class="space" id="samplework" src="images/design/SoulCow.jpg" alt="SoulCow Marketing Materials"></a>
+I teach one on one personalized courses for individuals and groups interested in learning video production and photography techniques. I work remotely using screen sharing and voice/video chat. We look at your work from your computer on your schedule. Please contact me at <a href="mailto:cowpervideos@gmail.com">cowpervideos@gmail.com</a> to set up a lesson and tell me about what you're interested in learning.
 
 <br>
 
 </p>
+
+<br>
 
 <hr color="#af5750">
 
 <br>
 
-<p>
-  <b>Becoming Helen Keller (2016 - 2017)</b>
-  <br><br>
-  Graphics for website, marketing materials, social media, and Kickstarter campaign
-  <br><br>
-
-<a href="https://www.becominghelenkeller.org"><img class="space" id="samplework" src="images/design/BHK.png" alt="BHK Marketing Materials"></a>
-
-<br>
-
-</p>
-
-<hr color="#af5750">
+<h3 style="text-align: left;">Areas of Expertise:</h3>
 
 <br>
 
 <p>
-  <b>University of Minnesota Psychology Deptartment (2017 - 2018)</b>
-  <br><br>
-  Graphics for website, events, and print materials
-  <br><br>
-
-<img class="space" id="samplework" src="images/design/Psychology.jpeg" alt="UMN Psychology Logo">
-
-<br>
-
-</p>
-
-<hr color="#af5750">
-
-<br>
-
-<p>
-  <b>John F. Kennedy Coloring Book (2015)</b>
-  <br><br>
-  Drawings and concept
-  <br><br>
-
-<img class="space" id="samplework" src="images/design/JFK.jpg" alt="JFK Coloring Book">
-
-<br>
-
-</p>
-
-<hr color="#af5750">
-
-<br>
-
-<p>
-  <b>Five College Undergraduate Research Journal (2014)</b>
-  <br><br>
-  Graphics for website, social media, and print materials
-  <br><br>
-
-<img class="space" id="samplework" src="images/design/5CJ.png" style="width: 50%;" alt="Five College Undergrad Journal Logo">
-
-<br>
-
+  <b>Cinematography and Video Production</b>
+  <br>
+  DSLR, Magic Lantern, Blackmagic Cinema, Canon, Sony, GoPro, 16mm film, Super 8 film.
+<br><br>
+  <b>Video Editing</b>
+  <br>
+  Adobe Premiere, Adobe After Effects, Final Cut Pro, and DaVinci Resolve.
+<br><br>
+  <b>Audio Production and Mixing</b>
+  <br>
+  5.1 surround and stereo recording, mixing, sweetening, and editing techniques in Adobe Audition.
+<br><br>
+  <b>Photography</b>
+  <br>
+  DSLR photography, Adobe Lightroom, Adobe Photoshop, digital raw processing, 35mm, medium format, and large format film (various cameras and processing techniques).
+<br><br>
+  <b>Archiving and Preservation</b>
+  <br>
+  Digital transfers of film, VHS, etc. Preservation and archiving techniques for archaic media formats.
+<br><br>
+  <b>Live Streaming and Video Engineering</b>
+  <br>
+  Live streaming of audio and video for television, theatre, and conferences. (Blackmagic ATEM, Ustream, Mediasite, YouTube, Facebook).
+<br><br><br>
+If you don't see what you're looking for just email and ask!
+<br><br>
 </p>
 
 </div>
