--- a/personalized-tutoring.html
+++ b/personalized-tutoring.html
@@ -60,11 +60,11 @@
 
 <hr color="#50A8AF">
 <h2>Personalized Tutoring</h2>
-<h3>Learn remotely or in-person</h3>
+<h3>Learn remotely or in person</h3>
 <hr color="#50A8AF">
 <br>
 
-<img class="space" id="me" src="images/Ben_Cowper.jpg" alt="Ben Cowper">
+<img class="space" id="me" src="images/production/Prod_QT2.jpg" alt="Learn film production">
 
 <br><br>
 
