--- a/personalized-tutoring.html
+++ b/personalized-tutoring.html
@@ -91,7 +91,7 @@ I teach one on one personalized courses for individuals and groups interested in
 <p>
   <b>Cinematography and Video Production</b>
   <br>
-  DSLR, Magic Lantern, Blackmagic Cinema, Canon, Sony, GoPro, 16mm film, Super 8 film.
+  DSLR, Magic Lantern, Blackmagic Cinema, Canon, Sony, GoPro, 16mm film, and Super 8 film.
 <br><br>
   <b>Video Editing</b>
   <br>
@@ -99,7 +99,7 @@ I teach one on one personalized courses for individuals and groups interested in
 <br><br>
   <b>Audio Production and Mixing</b>
   <br>
-  5.1 surround and stereo recording, mixing, sweetening, and editing techniques in Adobe Audition.
+  Podcast production, 5.1 surround and stereo recording, mixing, sweetening, and editing techniques in Adobe Audition.
 <br><br>
   <b>Photography</b>
   <br>
@@ -109,9 +109,9 @@ I teach one on one personalized courses for individuals and groups interested in
   <br>
   Digital transfers of film, VHS, etc. Preservation and archiving techniques for archaic media formats.
 <br><br>
-  <b>Live Streaming and Video Engineering</b>
+  <b>Live Streaming and Broadcast Engineering</b>
   <br>
-  Live streaming of audio and video for television, theatre, and conferences. (Blackmagic ATEM, Ustream, Mediasite, YouTube, Facebook).
+  DIY studio construction, live streaming of audio and video for web, television, theatre, and conferences (Blackmagic ATEM, Ustream, Mediasite, YouTube, Facebook).
 <br><br><br>
 If you don't see what you're looking for just email and ask!
 <br><br>
