--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -72,7 +72,7 @@
 
 <p>
 
-I have always loved working with video, and began producing professional work as early as 2007. Since then I have worked on over 100 projects for a wide variety of individuals, artists, and commercial clients including: Yale University, Hampshire College, Mount Holyoke College, PBS <i>American Masters</i>, Cambridge University Press, Northampton Chamber of Commerce, and The Global Fibrosis Foundation.  
+I have always loved working with video, and began producing professional work in 2007. Since then I have worked on hundreds of projects for a wide variety of individuals, artists, and commercial clients including: Yale University, PBS <i>American Masters</i>, and Cambridge University Press.
 
 <br><br>
 
