added work sample

--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -67,6 +67,41 @@
 <div class="main">
 
 <hr color="#50A8AF">
+<h2>Banabox Instructional Videos (series, 2019 - Present)</h2>
+<hr color="#50A8AF">
+<br>
+<div class="space">
+<div class="container">
+
+  <a id="bana"><img src="images/thumbs/commercial/Banabox.jpg" class="video"></a>
+  <div id="banaframe">
+  </div>
+
+<script type="text/javascript">
+$(function(){
+    $('#bana').click(function(){
+        if(!$('#iframe').length) {
+                $('#banaframe').html('<iframe src="https://player.vimeo.com/video/385193127?color=af5750&title=0&byline=0&portrait=0" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen class="video"></iframe>');
+        }
+    });   
+});
+</script>
+
+</div>
+
+<br><br>
+<p>
+  TRT 7:34
+<br><br>
+  camera, editor
+<br><br>
+  An ongoing series of instructional videos on Japanese flower arrangement produced for Banabox.
+</p>
+</div>
+
+<br><br>
+
+<hr color="#50A8AF">
 <h2>DriveMount Animations (2018)</h2>
 <hr color="#50A8AF">
 <br>
