--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -108,6 +108,8 @@
 <br><br>
   An experimental horror film about a hitchhiker's descent into madness, adapted from a short story by Stephen King. The film was produced through King's dollar baby program as my thesis film at Hampshire College. For a private screening, please <a href="mailto:cowpervideos@gmail.com">contact me</a> directly.
 <br><br>
+	Read <a target="_blank" href="https://terror.ca/movie/tt5865034">a review of Nona</a> by Steve Hutchison of Tales of Terror, a comprehensive database of horror film reviews.
+<br><br>
   Read more about the film and production process in <a target="_blank" href="http://www.stephenkingshortmovies.com/interviews/ben-cowper-october-18-2017/">my interview</a>  with stephenkingshortmovies.com
 <br><br>
   <a href="photography-portfolio.html"> Production stills</a>
