--- a/commercial-film-portfolio.html
+++ b/commercial-film-portfolio.html
@@ -67,7 +67,7 @@
 <div class="main">
 
 <hr color="#50A8AF">
-<h2>Banabox Instructional Videos (series, 2019 - Present)</h2>
+<h2>Banabox Instructional Videos (series, 2019 - 2020)</h2>
 <hr color="#50A8AF">
 <br>
 <div class="space">
@@ -95,7 +95,7 @@ $(function(){
 <br><br>
   camera, editor
 <br><br>
-  An ongoing series of instructional videos on Japanese flower arrangement produced for Banabox.
+  A series of instructional videos on Japanese flower arrangement produced for Banabox.
 </p>
 </div>
 
