--- a/ben-cowper-about.html
+++ b/ben-cowper-about.html
@@ -95,41 +95,21 @@ A partial list of my film credits can be found <a target="_blank" href="Ben Cowp
 <br>
 
 <p>
-  <b>Cinematographer</b>
-  <br>
-  5DmkIII w/Magic Lantern, Blackmagic Cinema, Canon Cinema, GoPro, 16mm Bolex, Super 8 (hand processed)
+  <b>Cinematographer</b> skilled in operating cinema cameras from all major manufacturers and familiar with custom installations (Magic Lantern), raw video workflows, and analog film (16mm Bolex and Super 8).
 <br><br>
-  <b>Editor, Colorist</b>
-  <br>
-  Adobe Premiere, After Effects, Photoshop, Final Cut Pro, DaVinci Resolve
+  <b>Editor and Colorist</b> specializing in Adobe Suite (Premiere, AE, PS) with occasional FCP and Resolve use.
 <br><br>
-  <b>Audio Engineer</b>
-  <br>
-  5.1 surround and stereo recording/mixing (ProTools, Audition, Logic)
+  <b>Broadcast Engineer</b> with a portfolio of custom designed multi-camera production studios and mobile units for live streaming television, theatre, conferences, and events. (Blackmagic ATEM, Ustream, Mediasite)
 <br><br>
-  <b>Web Designer</b>
-  <br>
-  HTML, CSS, Squarespace, Drupal, Wordpress
+  <b>Audio</b> recording, cleaning, and mixing in 5.1 surround and stereo using Adobe Audition and ProTools.
+ <br><br>
+<b>Photographer</b> experienced in digital, 35mm, medium format, and large format film (various cameras and hand processing techniques).
 <br><br>
-  <b>Lighting Designer</b>
-  <br>
-  Designing and drawing lighting plots for film and theatre productions
+  <b>Journalism / Radio</b> host and producer for Yurt Radio at Hampshire College. Staff writer and photography editor for The Climax, a print and online newspaper.
 <br><br>
-  <b>Photographer</b>
-  <br>
-  Digital, 35mm, medium format, and large format film (various cameras and hand processing techniques)
+  <b>Archiving</b> and digital telecine of 16mm and Super 8 film, consultant in preservation of archaic media formats.
 <br><br>
-  <b>Archivist</b>
-  <br>
-  Digital telecine of 16mm and Super 8 film. Preserving and authoring archaic media formats
-<br><br>
-  <b>Live Streaming</b>
-  <br>
-  Live switching of audio and video for television, theatre, and conferences. Designed and built a 4 camera live TV production and green screen studio. (Blackmagic ATEM, Ustream, Mediasite)
-<br><br>
-  <b>IT and Academic Technology</b>
-  <br>
-  Python, Apple Computers, Raspberry Pi, Google Suite, LaTeX, Arduino, Microsoft Office, Drupal, Canvas, Moodle
+  <b>Web Design and Coding</b> in Python, HTML, CSS or custom designs in Drupal, Squarespace, and Wordpress.
 </p>
 
 <br><br><br>
