--- a/fiction-film-portfolio.html
+++ b/fiction-film-portfolio.html
@@ -105,7 +105,7 @@ $(function(){
 <p>
   Coming Summer 2020
 <br><br>
-  editor, camera, visual effects
+  technical director, camera, editor, visual effects
 </p>
 </div>
 
